--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "products-ms"]
 	path = products-ms
 	url = https://github.com/Alecto-Microservices-Products/products-microservices.git
+[submodule "orders-ms"]
+	path = orders-ms
+	url = https://github.com/Alecto-Microservices-Products/orders-microservices.git
