chore(docker): Añadiendo el script para generar el auth-ms

--- a/.env.template
+++ b/.env.template
@@ -6,4 +6,11 @@ PAYMENTS_MS_PORT=3003
 STRIPE_SECRET=
 STRIPE_SUCCESS_URL=http://localhost:3003/payments/success
 STRIPE_CANCEL_URL=http://localhost:3003/payments/cancel
+
+
 STRIPE_ENDPOINTSECRET=
+
+AUTH_MS_PORT=3004
+AUTH_DATABASE_URL=mongodb://mongo_database:27017/Auth-DB
+
+JWT_SECRET=EstoDebeSerUnStringSeguro
